# smile-explorer

./: .bazelrc  .gitignore  .hdoc.toml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  binomial_tree.cpp  binomial_tree.h  binomial_tree_test.cpp  bsm_test.cpp  derivative.cpp  derivative.h  derivative_test.cpp  monte_carlo.cpp  monte_carlo.h  propagators.h  render_tree.cpp  stochastic_tree_model.h  stochastic_tree_model_test.cpp  time.h  time_test.cpp  volatility.h  volatility_test.cpp
.github/workflows/: hdoc.yml  presubmit.yml
derivatives/: BUILD.bazel  bsm.h  bsm_test.cpp  derivative.h  derivative_test.cpp  forward_rate_agreement.h  interest_rate_derivative.h  interest_rate_derivative_test.cpp  target_redemption_forward.cpp  target_redemption_forward.h  target_redemption_forward_test.cpp  vanilla_option.cpp  vanilla_option.h  vanilla_option_test.cpp
explorer/: BUILD.bazel  asset_visualiser.h  explorer.cpp  explorer_params.h  global_rates.h  global_rates_test.cpp  gui_widgets.h  propagator_factories.h  rate_curve_visualiser.h  tarf_visualiser.h  tree_render.h  vol_surface_factories.h
explorer/market_data/: BUILD.bazel  currency_pairs_20250318.csv  currency_pairs_20250907.csv
instruments/swaps/: BUILD.bazel  contract.h  fixed_cashflow_instrument.h  fixed_cashflow_instrument_test.cpp  floating_cashflow_instrument.cpp  floating_cashflow_instrument.h  floating_cashflow_instrument_test.cpp  interest_rate_swap.h  interest_rate_swap_test.cpp
montecarlo/: BUILD.bazel  explorer.cpp  prototype.h  prototype_test.cpp
rates/: BUILD.bazel  arrow_debreu.h  arrow_debreu_test.cpp  bdt.h  curve_calculators.h  curve_calculators_test.cpp  fixed_cashflow_instrument.h  fixed_cashflow_instrument_test.cpp  rates_curve.h  rates_curve_test.cpp  short_rate_tree_curve.h  short_rate_tree_curve_test.cpp  swaps.h  tree_curves.h  yield_curve.h  zero_curve.cpp  zero_curve.h  zero_curve_test.cpp
test/: BUILD.bazel  tree_matchers.h
time/: BUILD.bazel  time.h  time_enums.h  time_test.cpp  timegrid.h  timegrid_test.cpp
trees/: BUILD.bazel  binomial_tree.cpp  binomial_tree.h  binomial_tree_test.cpp  hull_white_propagator.cpp  hull_white_propagator.h  hull_white_propagator_test.cpp  propagators.h  stochastic_tree_model.h  stochastic_tree_model_test.cpp  trinomial_tree.cpp  trinomial_tree.h  trinomial_tree_operators.h  trinomial_tree_operators_test.cpp  trinomial_tree_test.cpp
volatility/: BUILD.bazel  volatility.h  volatility_test.cpp
