package(default_visibility = ["//markets:__subpackages__"])

cc_library(
    name = "binomial_tree",
    hdrs = ["binomial_tree.h"],
    deps = [
        ":time",
        "@eigen",
    ],
)

cc_test(
    name = "binomial_tree_test",
    srcs = ["binomial_tree_test.cpp"],
    deps = [
        ":binomial_tree",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "monte_carlo",
    srcs = ["monte_carlo.cpp"],
    hdrs = ["monte_carlo.h"],
    deps = [
        "@com_google_absl//absl/random",
    ],
)

cc_binary(
    name = "render_tree",
    srcs = ["render_tree.cpp"],
    deps = [
        ":binomial_tree",
        ":yield_curve",
        "//markets/rates:arrow_debreu",
        "//markets/rates:bdt",
        "//markets/rates:swaps",
        "@eigen",
        "@glfw",
        "@imgui",
        "@imgui//backends:platform-glfw",
        "@imgui//backends:renderer-opengl3",
        "@implot",
    ],
)

cc_library(
    name = "time",
    hdrs = ["time.h"],
)

cc_library(
    name = "yield_curve",
    hdrs = ["yield_curve.h"],
    deps = [
        "@boost.math",
    ],
)
