bazel_dep(name = "abseil-cpp", version = "20250127.0")

# Required for GLFW support on MacOS.
bazel_dep(name = "apple_support", version = "1.18.0")

bazel_dep(name = "boost.math", version = "1.83.0.bcr.1")
bazel_dep(name = "ceres-solver", version = "2.2.0")
bazel_dep(name = "eigen", version = "3.4.0.bcr.2")
bazel_dep(name = "glfw", version = "3.3.9")
bazel_dep(name = "google_benchmark", version = "1.9.1")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "imgui", version = "1.91.8")
bazel_dep(name = "implot", version = "0.16")
bazel_dep(name = "implot3d", version = "0.2")
bazel_dep(name = "magic_enum", version = "0.9.6")
