package(default_visibility = ["//visibility:public"])

cc_library(
    name = "bsm",
    hdrs = ["bsm.h"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "bsm_test",
    srcs = ["bsm_test.cpp"],
    deps = [
        ":bsm",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "derivative",
    hdrs = ["derivative.h"],
    deps = [
        ":vanilla_option",
        "//rates:rates_curve",
        "//trees:binomial_tree",
        "@abseil-cpp//absl/log",
    ],
)

cc_test(
    name = "derivative_test",
    srcs = ["derivative_test.cpp"],
    deps = [
        ":bsm",
        ":derivative",
        "//trees:propagators",
        "//trees:stochastic_tree_model",
        "//volatility",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "vanilla_option",
    srcs = ["vanilla_option.cpp"],
    hdrs = ["vanilla_option.h"],
    deps = [
        ":bsm",
        "//trees:binomial_tree",
        "@abseil-cpp//absl/log",
    ],
)

cc_test(
    name = "vanilla_option_test",
    srcs = ["vanilla_option_test.cpp"],
    deps = [
        ":vanilla_option",
        "//rates:rates_curve",
        "@googletest//:gtest_main",
    ],
)
