package(default_visibility = ["//visibility:public"])

cc_library(
    name = "bsm",
    hdrs = ["bsm.h"],
    visibility = ["//visibility:private"],
)

cc_test(
    name = "bsm_test",
    srcs = ["bsm_test.cpp"],
    deps = [
        ":bsm",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "derivative",
    hdrs = ["derivative.h"],
    deps = [
        ":vanilla_option",
        "//rates:rates_curve",
        "//trees:binomial_tree",
        "@abseil-cpp//absl/log",
    ],
)

cc_test(
    name = "derivative_test",
    srcs = ["derivative_test.cpp"],
    deps = [
        ":derivative",
        "//rates:zero_curve",
        "//trees:propagators",
        "//trees:stochastic_tree_model",
        "//volatility",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "interest_rate_derivative",
    hdrs = ["interest_rate_derivative.h"],
    deps = [
        ":derivative",
        ":vanilla_option",
        "//rates:tree_curves",
        "//trees:trinomial_tree",
        "@abseil-cpp//absl/log",
    ],
)

cc_test(
    name = "interest_rate_derivative_test",
    srcs = ["interest_rate_derivative_test.cpp"],
    deps = [
        ":interest_rate_derivative",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "vanilla_option",
    srcs = ["vanilla_option.cpp"],
    hdrs = ["vanilla_option.h"],
    deps = [
        ":bsm",
        "//trees:binomial_tree",
        "@abseil-cpp//absl/log",
    ],
)

cc_test(
    name = "vanilla_option_test",
    srcs = ["vanilla_option_test.cpp"],
    deps = [
        ":vanilla_option",
        "//rates:zero_curve",
        "@googletest//:gtest_main",
    ],
)
