package(default_visibility = ["//markets:__subpackages__"])

cc_library(
    name = "asset_visualiser",
    hdrs = ["asset_visualiser.h"],
    deps = [
        ":explorer_params",
        ":propagator_factories",
        "//markets:derivative",
        "//markets:stochastic_tree_model",
        "@imgui",
        "@implot",
    ],
)

cc_library(
    name = "explorer_params",
    hdrs = ["explorer_params.h"],
    deps = [
        "//markets/rates:rates_curve",
    ],
)

cc_binary(
    name = "explorer",
    srcs = ["explorer.cpp"],
    deps = [
        ":asset_visualiser",
        ":global_rates",
        ":rate_curve_visualiser",
        "//markets:binomial_tree",
        "//markets:propagators",
        "//markets:stochastic_tree_model",
        "//markets:volatility",
        "//markets:yield_curve",
        "//markets/rates:rates_curve",
        "@eigen",
        "@glfw",
        "@imgui",
        "@imgui//backends:platform-glfw",
        "@imgui//backends:renderer-opengl3",
        "@implot",
        "@implot3d",
    ],
)

cc_library(
    name = "global_rates",
    hdrs = ["global_rates.h"],
    deps = [
        "//markets/rates:rates_curve",
        "@magic_enum",
    ],
)

cc_library(
    name = "propagator_factories",
    hdrs = ["propagator_factories.h"],
    deps = [
        ":explorer_params",
        "//markets:propagators",
    ],
)

cc_library(
    name = "rate_curve_visualiser",
    hdrs = ["rate_curve_visualiser.h"],
    deps = [
        ":explorer_params",
        "//markets/rates:rates_curve",
        "@imgui",
        "@implot",
    ],
)
