package(default_visibility = ["//visibility:public"])

cc_library(
    name = "asset_visualiser",
    hdrs = ["asset_visualiser.h"],
    deps = [
        ":explorer_params",
        ":propagator_factories",
        ":tree_render",
        "//derivatives:derivative",
        "//trees:stochastic_tree_model",
        "@imgui",
        "@implot",
    ],
)

cc_library(
    name = "explorer_params",
    hdrs = ["explorer_params.h"],
    deps = [
        ":global_rates",
        "//rates:rates_curve",
    ],
)

cc_binary(
    name = "explorer",
    srcs = ["explorer.cpp"],
    deps = [
        ":asset_visualiser",
        ":global_rates",
        ":rate_curve_visualiser",
        ":vol_surface_factories",
        "//trees:propagators",
        "//volatility",
        "@glfw",
        "@imgui",
        "@imgui//backends:platform-glfw",
        "@imgui//backends:renderer-opengl3",
        "@implot",
        "@implot3d",
    ],
)

cc_library(
    name = "global_rates",
    hdrs = ["global_rates.h"],
    data = ["//explorer/market_data"],
    deps = [
        "//rates:rates_curve",
        "//rates:zero_curve",
        "@abseil-cpp//absl/log",
        "@csv-parser",
        "@magic_enum",
    ],
)

cc_test(
    name = "global_rates_test",
    srcs = ["global_rates_test.cpp"],
    deps = [
        ":global_rates",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "gui_widgets",
    hdrs = ["gui_widgets.h"],
    deps = [
        ":explorer_params",
        "//rates:rates_curve",
        "@imgui",
        "@magic_enum",
    ],
)

cc_library(
    name = "propagator_factories",
    hdrs = ["propagator_factories.h"],
    deps = [
        ":explorer_params",
        "//trees:propagators",
    ],
)

cc_library(
    name = "rate_curve_visualiser",
    hdrs = ["rate_curve_visualiser.h"],
    deps = [
        ":explorer_params",
        ":gui_widgets",
        "//rates:rates_curve",
        "//rates:short_rate_tree_curve",
        "@imgui",
        "@implot",
    ],
)

cc_library(
    name = "tree_render",
    hdrs = ["tree_render.h"],
    deps = [
        "//trees:binomial_tree",
        "//trees:trinomial_tree",
    ],
)

cc_library(
    name = "vol_surface_factories",
    hdrs = ["vol_surface_factories.h"],
    deps = [
        ":explorer_params",
        "//volatility",
    ],
)
