package(default_visibility = ["//visibility:public"])

cc_library(
    name = "arrow_debreu",
    hdrs = ["arrow_debreu.h"],
    deps = ["//trees:binomial_tree"],
)

# cc_test(
#     name = "arrow_debreu_test",
#     srcs = ["arrow_debreu_test.cpp"],
#     deps = [
#         ":arrow_debreu",
#         "//trees:binomial_tree",
#         "//trees:propagators",
#         "//trees:stochastic_tree_model",
#         "@googletest//:gtest_main",
#     ],
# )

cc_library(
    name = "curve_calculators",
    hdrs = ["curve_calculators.h"],
    deps = [
        "//time",
    ],
)

cc_library(
    name = "rates_curve",
    hdrs = ["rates_curve.h"],
    deps = [
        ":curve_calculators",
        "//time",
    ],
)

cc_test(
    name = "rates_curve_test",
    srcs = ["rates_curve_test.cpp"],
    deps = [
        ":rates_curve",
        ":tree_curves",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "tree_curves",
    hdrs = ["tree_curves.h"],
    deps = [
        ":arrow_debreu",
        "//trees:binomial_tree",
        "//trees:propagators",
        "//trees:stochastic_tree_model",
    ],
)
