package(default_visibility = ["//visibility:public"])

cc_library(
    name = "curve_calculators",
    hdrs = ["curve_calculators.h"],
    deps = [
        "//time:time_enums",
    ],
)

cc_test(
    name = "curve_calculators_test",
    srcs = ["curve_calculators_test.cpp"],
    deps = [
        ":curve_calculators",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "fixed_cashflow_instrument",
    hdrs = ["fixed_cashflow_instrument.h"],
    deps = [
        ":short_rate_tree_curve",
        "//trees:trinomial_tree",
        "//trees:trinomial_tree_operators",
        "@abseil-cpp//absl/log",
    ],
)

cc_test(
    name = "fixed_cashflow_instrument_test",
    srcs = ["fixed_cashflow_instrument_test.cpp"],
    deps = [
        ":fixed_cashflow_instrument",
        ":zero_curve",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "rates_curve",
    hdrs = ["rates_curve.h"],
    deps = [
        ":curve_calculators",
        "//time:time_enums",
    ],
)

cc_library(
    name = "short_rate_tree_curve",
    hdrs = ["short_rate_tree_curve.h"],
    deps = [
        ":curve_calculators",
        ":rates_curve",
        "//rates:zero_curve",
        "//trees:hull_white_propagator",
        "//trees:trinomial_tree",
        "@abseil-cpp//absl/log",
    ],
)

cc_test(
    name = "short_rate_tree_curve_test",
    srcs = ["short_rate_tree_curve_test.cpp"],
    deps = [
        ":short_rate_tree_curve",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "zero_curve",
    srcs = ["zero_curve.cpp"],
    hdrs = ["zero_curve.h"],
    deps = [
        ":rates_curve",
        "@abseil-cpp//absl/log",
        "@boost.math",
    ],
)

cc_test(
    name = "zero_curve_test",
    srcs = ["zero_curve_test.cpp"],
    deps = [
        ":zero_curve",
        "@googletest//:gtest_main",
    ],
)
