package(default_visibility = ["//visibility:public"])

cc_library(
    name = "time_enums",
    hdrs = ["time_enums.h"],
)

cc_library(
    name = "timegrid",
    hdrs = ["timegrid.h"],
)

cc_test(
    name = "timegrid_test",
    srcs = ["timegrid_test.cpp"],
    deps = [
        ":timegrid",
        "@googletest//:gtest_main",
    ],
)
