package(default_visibility = ["//visibility:public"])

cc_library(
    name = "binomial_tree",
    srcs = ["binomial_tree.cpp"],
    hdrs = ["binomial_tree.h"],
    deps = [
        "//rates:rates_curve",
        "//time:time_enums",
        "//volatility",
        "@abseil-cpp//absl/log",
        "@eigen",
    ],
)

cc_test(
    name = "binomial_tree_test",
    srcs = ["binomial_tree_test.cpp"],
    deps = [
        ":binomial_tree",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "hull_white_propagator",
    srcs = ["hull_white_propagator.cpp"],
    hdrs = ["hull_white_propagator.h"],
    deps = [":trinomial_tree"],
)

cc_test(
    name = "hull_white_propagator_test",
    srcs = ["hull_white_propagator_test.cpp"],
    deps = [
        ":hull_white_propagator",
        ":trinomial_tree",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "propagators",
    hdrs = ["propagators.h"],
    deps = [
        ":binomial_tree",
        "//rates:rates_curve",
    ],
)

cc_library(
    name = "stochastic_tree_model",
    hdrs = ["stochastic_tree_model.h"],
    deps = [
        ":binomial_tree",
    ],
)

cc_test(
    name = "stochastic_tree_model_test",
    srcs = ["stochastic_tree_model_test.cpp"],
    deps = [
        ":propagators",
        ":stochastic_tree_model",
        "//derivatives:derivative",
        "//rates:zero_curve",
        "//test:tree_matchers",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "trinomial_tree",
    srcs = ["trinomial_tree.cpp"],
    hdrs = ["trinomial_tree.h"],
    deps = [
        "//time:time_enums",
        "//time:timegrid",
    ],
)

cc_test(
    name = "trinomial_tree_test",
    srcs = ["trinomial_tree_test.cpp"],
    deps = [
        ":trinomial_tree",
        "@googletest//:gtest_main",
    ],
)
