package(default_visibility = ["//visibility:public"])

cc_library(
    name = "volatility",
    hdrs = ["volatility.h"],
    deps = [
        "//time:timegrid",
        "@eigen",
    ],
)

cc_test(
    name = "volatility_test",
    srcs = ["volatility_test.cpp"],
    deps = [
        ":volatility",
        "@googletest//:gtest_main",
    ],
)
